--- a/index.html
+++ b/index.html
@@ -45,13 +45,10 @@
         exponent:2,
       }
     });
+
     nx.onload = function() {
-
-      <!-- matrix1.row = 8; -->
-        <!-- matrix1.col = 8; -->
-        <!-- matrix1.init(); -->
-
-        <!-- matrix1.draw(); -->
+    nx.colorize("accent", "#D7FC89");
+    nx.colorize("fill", "#252525");
 
     }
 
