--- a/index.html
+++ b/index.html
@@ -8,10 +8,6 @@
     <script type="text/javascript" src="tone.js"></script>
     <script>
 
-
-
-
-
     var ping = new Tone.PingPongDelay(0.16, 0.7).toMaster();
 
     var filter = new Tone.Filter(800, "lowpass").connect(ping);
@@ -46,12 +42,32 @@
       }
     });
 
-    nx.onload = function() {
-    nx.colorize("accent", "#D7FC89");
-    nx.colorize("fill", "#252525");
+nx.onload = function() {
+  nx.colorize("accent", "#D7FC89");
+  nx.colorize("fill", "#252525");
 
+  matrix1.col = 8;
+  matrix1.row = 8;
+  matrix1.init();
+
+
+  matrix1.on('*',function(data) {
+    synth.set("detune",~~(Math.random()*10-5));
+
+    if (data.grid) {
+      for (var i=0;i<data.grid.length;i++) {
+        for (var j=0;j<data.grid[i].length;j++) {
+
+          if (data.grid[i][j]) {
+            synth.triggerAttackRelease((j+1)*(i+1)*33, .42);
+          }
+        }
+      }
     }
-
+  });
+  <!-- matrix1.matrix[1][2] = 1; -->
+    matrix1.draw()
+}
     </script>
   </head>
   <body>
