canvas layout, added envelope

--- a/index.html
+++ b/index.html
@@ -70,12 +70,11 @@ nx.onload = function() {
 }
     </script>
   </head>
-  <body>
 
-    <canvas nx="matrix"></canvas>
-    <canvas nx="matrix" id="beatmatrix"></canvas>
-
-    <style>
+        <body>
+          <canvas nx="envelope"style="width:800px;height:80px;margin:10px auto"></canvas>
+          <canvas nx="matrix" style="width:700px;height:600px;margin:4% auto 0px"></canvas>
+          <style>
 
 body {
   background-color:#0e0e0e;
