--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ synth.set({
 
 nx.onload = function() {
 
-  nx.colorize("accent", "#D7FC89");
+  nx.colorize("accent", "#D0FD5B");
   nx.colorize("border", "#000000");
   nx.colorize("fill", "#252525");
 
