--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Zero-player</title>
-    <!-- <script type="text/javascript" src="app.js"></script> -->
+    <script type="text/javascript" src="app.js"></script>
     <script type="text/javascript" src="nexusUI.js"></script>
     <script type="text/javascript" src="tone.js"></script>
     <script>
