--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>Zero-player</title>
     <script type="text/javascript" src="nexusUI.js"></script>
     <script type="text/javascript" src="tone.js"></script>
+    <!-- <script type="text/javascript" src="keyboard.js"></script> -->
+    <script type="text/javascript" src="mousetrap.js"></script>
     <script type="text/javascript" src="app.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
