Adding divs for content, maybe move to a modal

--- a/index.html
+++ b/index.html
@@ -10,10 +10,29 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
-    <div class="page">
+    <div class="top">
       <canvas nx="envelope"style="width:515px;height:60px;margin:2px auto 0"></canvas>
-      <canvas nx="matrix" style="width:520px;height:470px;margin:2px auto"></canvas>
     </div>
-</body>
+    <div class="page">
+      <!-- <div class="left"> -->
+      <!--   <img src="./images/blocks.png" alt="blocks" style="width:120px;height:120px;"> -->
+      <!--   <br> -->
+      <!--   <img src="./images/tub.png" alt="blocks" style="width:120px;height:120px;"> -->
+      <!--   <br> -->
+      <!--   <img src="./images/snake.png" alt="blocks" style="width:120px;height:120px;"> -->
+      <!-- </div> -->
+      <div class="middle">
+        <canvas nx="matrix" style="width:520px;height:470px;margin:2px auto"></canvas>
+        <!-- <canvas nx="colors"></canvas> -->
+      </div>
+      <!-- <div class="right"> -->
+      <!--   <img src="./images/carrier.png" alt="blocks" style="width:120px;height:120px;"> -->
+      <!--   <br> -->
+      <!--   <img src="./images/barge.png" alt="blocks" style="width:120px;height:120px;"> -->
+      <!--   <br> -->
+      <!--   <img src="./images/python.png" alt="blocks" style="width:120px;height:120px;"> -->
+      <!-- </div> -->
+    </div>
+  </body>
 
 </html>
