Adding vex for awesome modal

--- a/index.html
+++ b/index.html
@@ -6,21 +6,27 @@
     <script type="text/javascript" src="nexusUI.js"></script>
     <script type="text/javascript" src="tone.js"></script>
     <script type="text/javascript" src="keyboard.js"></script>
+    <script type="text/javascript" src="jquery-3.1.0.min.js"></script>
+    <!-- <script type="text/javascript" src="jquery.easyModal.js"></script> -->
+    <!-- <script type="text/javascript" src="modal.js"></script> -->
+
+    <!-- VEX -->
+    <script src="vex.combined.min.js"></script>
+    <script>vex.defaultOptions.className = 'vex-theme-wireframe';</script>
+    <link rel="stylesheet" href="vex.css" />
+    <link rel="stylesheet" href="vex-theme-wireframe.css" />
+
     <script type="text/javascript" src="app.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
     <div class=left>
-      <button>
-      HELP</button>
     </div>
     <div class="middle">
       <canvas nx="envelope"style="width:520px;height:60px;margin:2px auto 0"></canvas>
       <canvas nx="matrix" style="width:520px;height:470px;margin:2px auto"></canvas>
-      <!-- <canvas nx="typewriter"></canvas> -->
     </div>
     <div class=right>
     </div>
   </body>
-
 </html>
