--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script type="text/javascript" src="nexusUI.js"></script>
     <script type="text/javascript" src="tone.js"></script>
     <script type="text/javascript" src="keyboard.js"></script>
+    <script type="text/javascript" src="help.js"></script>
     <script type="text/javascript" src="jquery-3.1.0.min.js"></script>
     <!-- <script type="text/javascript" src="jquery.easyModal.js"></script> -->
     <!-- <script type="text/javascript" src="modal.js"></script> -->
@@ -21,6 +22,7 @@
   </head>
   <body>
     <div class=left>
+      <button class="help" onClick="help()">?</button>
     </div>
     <div class="middle">
       <canvas nx="envelope"style="width:520px;height:60px;margin:2px auto 0"></canvas>
