Added to subfolders

--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Zero-player</title>
-    <script type="text/javascript" src="mousetrap.js"></script>
-    <script type="text/javascript" src="nexusUI.js"></script>
-    <script type="text/javascript" src="tone.js"></script>
-    <script type="text/javascript" src="keyboard.js"></script>
-    <script type="text/javascript" src="help.js"></script>
-    <script type="text/javascript" src="jquery-3.1.0.min.js"></script>
-    <script src="vex.combined.min.js"></script>
+    <script type="text/javascript" src="js/mousetrap.js"></script>
+    <script type="text/javascript" src="js/nexusUI.js"></script>
+    <script type="text/javascript" src="js/tone.js"></script>
+    <script type="text/javascript" src="js/keyboard.js"></script>
+    <script type="text/javascript" src="js/help.js"></script>
+    <script type="text/javascript" src="js/jquery-3.1.0.min.js"></script>
+    <script type="text/javascript" src="js/vex.combined.min.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
     <script>vex.defaultOptions.className = 'vex-theme-wireframe';</script>
-    <link rel="stylesheet" href="vex.css" />
-    <link rel="stylesheet" href="vex-theme-wireframe.css" />
+    <link rel="stylesheet" type="text/css" href="css/vex.css" />
+    <link rel="stylesheet" type="text/css" href="css/vex-theme-wireframe.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
 
-    <script type="text/javascript" src="app.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
     <div class=left>
