--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <link rel="stylesheet" type="text/css" href="css/vex.css" />
     <link rel="stylesheet" type="text/css" href="css/vex-theme-wireframe.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
-
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="images/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
   </head>
   <body>
     <div class=left>
