--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
+<!DOCTYPE html>
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Zero-player</title>
+    <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
     <script type="text/javascript" src="js/tone.js"></script>
-    <script type="text/javascript" src="js/mousetrap.js"></script>
     <script type="text/javascript" src="js/nexusUI.js"></script>
+    <script type="text/javascript" src="js/mousetrap.js"></script>
     <script type="text/javascript" src="js/keyboard.js"></script>
     <script type="text/javascript" src="js/help.js"></script>
     <script type="text/javascript" src="js/jquery-3.1.0.min.js"></script>
     <script type="text/javascript" src="js/vex.combined.min.js"></script>
-    <script type="text/javascript" src="js/app.js"></script>
     <script>vex.defaultOptions.className = 'vex-theme-wireframe';</script>
+    <script type="text/javascript" defer src="js/app.js" ></script>
+
+    <script>if (window.module) module = window.module;</script>
     <link rel="stylesheet" type="text/css" href="css/vex.css" />
     <link rel="stylesheet" type="text/css" href="css/vex-theme-wireframe.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
